--- a/index.html
+++ b/index.html
@@ -4,29 +4,63 @@
         <meta charset="utf-8">
         <title>About Me</title>
         <!-- Initialize scale to device width (had to google this one) -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
         <!-- Link style sheets with reset first -->
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
+
         <div id="header-wrapper">
-            <header>
-                <h1>Ty Atkins</h1>
-            </header>
             <nav id="menu">
-                <ul id="nav-links">
-                    <li>
-                        <a href="index.html">About Me</a>
-                    </li>
-                    <li>
-                        <a href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a> 
-                    </li>
-                </ul>
+                <header>
+                    <h1 id="name">Ty Atkins</h1>
+                </header>
+                <div id=links-box>
+                    <ul id="nav-links">
+                        <li>
+                            <a href="index.html">About Me</a>
+                        </li>
+                        <li>
+                            <a href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact</a> 
+                        </li>
+                    </ul>
+                </div>
             </nav>
+        </div>
+
+        <section class="clearfix" id="container">
+            <h1>
+                About Me
+                <hr>
+            </h1>
+            <p>
+                <img src="http://via.placeholder.com/200x200"> 
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cupiditate, laborum maiores quos veniam quaerat maxime, deleniti tempora odit quibusdam numquam eius. Fugiat aliquam assumenda consequatur, ab pariatur velit repellendus!
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam molestiae ad, voluptatibus, magnam ipsa quae expedita quis ex non hic voluptates adipisci. Fugiat quisquam quos facere qui eum dolores suscipit.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis veritatis mollitia nam, impedit id numquam eum eius et. Vero quas molestias placeat nemo cupiditate nam tenetur temporibus, aliquam dolore totam.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eum, sit vel adipisci ex, tenetur ab inventore accusantium ratione magni atque distinctio! Dolorem, est! Enim inventore natus ratione quas molestias!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse sit dignissimos animi, nostrum natus recusandae, error delectus molestias ex ullam vitae ipsum nihil iste soluta repudiandae. Vero quaerat ad esse?
+            </p>
+
+            <p>
+                <img src="http://via.placeholder.com/200x200"> 
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cupiditate, laborum maiores quos veniam quaerat maxime, deleniti tempora odit quibusdam numquam eius. Fugiat aliquam assumenda consequatur, ab pariatur velit repellendus!
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam molestiae ad, voluptatibus, magnam ipsa quae expedita quis ex non hic voluptates adipisci. Fugiat quisquam quos facere qui eum dolores suscipit.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis veritatis mollitia nam, impedit id numquam eum eius et. Vero quas molestias placeat nemo cupiditate nam tenetur temporibus, aliquam dolore totam.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eum, sit vel adipisci ex, tenetur ab inventore accusantium ratione magni atque distinctio! Dolorem, est! Enim inventore natus ratione quas molestias!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse sit dignissimos animi, nostrum natus recusandae, error delectus molestias ex ullam vitae ipsum nihil iste soluta repudiandae. Vero quaerat ad esse?
+            </p>
+            
+        </section>
+        
+        <div id=footer-wrapper>
+            <footer>
+
+            </footer>
         </div>
 
     </body>
