--- a/portfolio.html
+++ b/portfolio.html
@@ -1,33 +1,90 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <title>About Me</title>
-        <!-- Initialize scale to device width (had to google this one) -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Link style sheets with reset first -->
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    </head>
-    <body>
-        <div id="header-wrapper">
+
+<head>
+    <meta charset="utf-8">
+    <title>About Me</title>
+    <!-- Initialize scale to device width (had to google this one) -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Link Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab|Tajawal" rel="stylesheet">
+    <!-- Link style sheets with reset first -->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+
+    <div id="header-wrapper">
+        <nav id="menu">
             <header>
-                <h1>Ty Atkins</h1>
+                <h1 id="name">Ty Atkins</h1>
             </header>
-            <nav id="menu">
+            <div id=links-box>
                 <ul id="nav-links">
                     <li>
                         <a href="index.html">About Me</a>
                     </li>
                     <li>
+                        |
+                    </li>
+                    <li>
                         <a href="portfolio.html">Portfolio</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a> 
+                        |
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
-            </nav>
-        </div>
+            </div>
+        </nav>
+    </div>
 
-    </body>
+    <section class="clearfix" id="container">
+        <h1>
+            Portfolio
+            <hr>
+        </h1>
+        <div id="images">
+            <div class="port-entity">
+                <img class="port-image" src="https://via.placeholder.com/301x301" alt="Placeholder">
+                    <span class="label">Interactive Resume</span>
+            </div>
+            <div class="port-entity">
+                <img class="port-image" src="https://via.placeholder.com/301x301" alt="Placeholder">
+                    <span class="label">AJAX API</span>
+            </div>
+            <div class="port-entity">
+                <img class="port-image" src="https://via.placeholder.com/301x301" alt="Placeholder">
+                    <span class="label">TensorFlow</span>
+            </div>
+             <div class="port-entity">
+                <img class="port-image" src="https://via.placeholder.com/301x301" alt="Placeholder">
+                    <span class="label">JavaScript Game</span>
+            </div>
+            <div class="port-entity">
+                <img class="port-image" src="https://via.placeholder.com/301x301" alt="Placeholder">
+                    <span class="label">MongoDB Scrapper</span>
+            </div>
+            <div class="port-entity">
+                <img class="port-image" src="https://via.placeholder.com/301x301" alt="Placeholder">
+                    <span class="label">Weather App</span>
+            </div>
+        </div>
+        
+        <p>Developer note, these images and spans will be clickable with jQuery/Javascript soon. Feature still in progress.</p>
+
+    </section>
+
+    <div id=footer-wrapper>
+        <footer>
+            2018 Ty Atkins. All Rights Reserved |
+            <a href="https://github.com/atkinsta">atkinsta at Github</a>
+        </footer>
+    </div>
+
+</body>
+
 </html>
