--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
             <hr>
         </h1>
         <div id="images">
-            <div class="port-entity">
+            <div class="port-entity"> <!-- These containers house the images as well as the spans for text to manage spacing. There are 6 of them.-->
                 <img class="port-image" src="https://via.placeholder.com/301x301" alt="Placeholder">
                     <span class="label">Interactive Resume</span>
             </div>
