--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div id="header-wrapper">
+    <div id="header-wrapper"> <!-- Contains header information and nav bar on each page -->
         <nav id="menu">
             <header>
                 <h1 id="name">Ty Atkins</h1>
@@ -42,7 +42,7 @@
         </nav>
     </div>
 
-    <section class="clearfix" id="container">
+     <section class="clearfix" id="container"> <!-- Main content container found on each page -->
         <h1>
             About Me
             <hr>
@@ -88,7 +88,7 @@
 
     </section>
 
-    <div id=footer-wrapper>
+    <div id=footer-wrapper> <!-- Contains footer -->
         <footer>
             2018 Ty Atkins. All Rights Reserved |
             <a href="https://github.com/atkinsta">atkinsta at Github</a>
