Added icon and fixed titles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>About Me</title>
+    <title>Ty Atkins | About</title>
     <!-- Initialize scale to device width (had to google this one) -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Link Google Fonts -->
@@ -11,6 +11,8 @@
     <!-- Link style sheets with reset first -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- Loads website icon in tab -->
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
 </head>
 
 <body>
