--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>About Me</title>
+    <title>Ty Atkins | Portfolio</title>
     <!-- Initialize scale to device width (had to google this one) -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Link Google Fonts -->
