added copyright symbol

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
     <div id=footer-wrapper>
         <footer>
-            2018 Ty Atkins. All Rights Reserved |
+            &copy;2018 Ty Atkins. All Rights Reserved |
             <a href="https://github.com/atkinsta">atkinsta at Github</a>
         </footer>
     </div>
