--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <div id=footer-wrapper> <!-- Contains footer -->
         <footer>
-            2018 Ty Atkins. All Rights Reserved |
+            &copy;2018 Ty Atkins. All Rights Reserved |
             <a href="https://github.com/atkinsta">atkinsta at Github</a>
         </footer>
     </div>
