--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
 
     <div id=footer-wrapper>
         <footer>
-            2018 Ty Atkins. All Rights Reserved |
+            &copy;2018 Ty Atkins. All Rights Reserved |
             <a href="https://github.com/atkinsta">atkinsta at Github</a>
         </footer>
     </div>
