--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         
-        <p>Developer note, these images and spans will be clickable with jQuery/Javascript soon. Feature still in progress.</p>
+        <p>Developer note, these images and spans will be clickable with jQuery/JavaScript soon. Feature still in progress.</p>
 
     </section>
 
