--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,8 @@
     <!-- Link style sheets with reset first -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- Loads website icon in tab -->
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
 </head>
 
 <body>
