Made GitHub link open in seperate tab

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div id=footer-wrapper> <!-- Contains footer -->
         <footer>
             &copy;2018 Ty Atkins. All Rights Reserved |
-            <a href="https://github.com/atkinsta">atkinsta at Github</a>
+            <a href="https://github.com/atkinsta" target="_blank">atkinsta at Github</a>
         </footer>
     </div>
 
