--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
     <div id=footer-wrapper>
         <footer>
             &copy;2018 Ty Atkins. All Rights Reserved |
-            <a href="https://github.com/atkinsta">atkinsta at Github</a>
+            <a href="https://github.com/atkinsta" target="_blank">atkinsta at Github</a>
         </footer>
     </div>
 
